Moved reminders to cheat sheet

--- a/session3/1.md
+++ b/session3/1.md
@@ -1,27 +1,6 @@
-Helpful Reminders:
+Find the WIF Format of the following:
 
->>> h = hex(1234567890)
->>> print h
-0x499602d2
->>> from binascii import hexlify, unhexlify
->>> hexlify(unhexlify(h[2:])[::-1])
-'d2029649'
-
->>> from binascii import hexlify, unhexlify
->>> s = hexlify(unhexlify("17e8fa")[::-1])
->>> print s
-'fae817'
->>> int(s, 16)
-16443415
-
-1. Convert the following hex from Big Endian to Little Endian:
-
-03ee4f7a4e68f802303bc659f8f817964b4b74fe046facc3ae1be4679d622c45
-
-813f79011acb80925dfe69b3def355fe914bd1d96a3f5f71bf8303c6a989c7d1
-
-2. Convert the following numbers from Little Endian to Decimal
-
-99c3980000000000
-
-a135ef0100000000
+1. 2^256-2^199, mainnet, compressed
+2. 2^256-2^201, testnet, uncompressed
+3. 0dba685b4511dbd3d368e5c4358a1277de9486447af7b3604a69b8d9d8b7889d, mainnet, uncompressed
+4. 1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, testnet, compressed
