--- a/session3/2.md
+++ b/session3/2.md
@@ -1,10 +1,11 @@
-Helpful Reminders:
+1. Convert the following hex from Big Endian to Little Endian:
 
-blockchain.info/tx/<tx_hash>?format=hex
+03ee4f7a4e68f802303bc659f8f817964b4b74fe046facc3ae1be4679d622c45
 
+813f79011acb80925dfe69b3def355fe914bd1d96a3f5f71bf8303c6a989c7d1
 
-Look up this transaction on blockchain.info:
+2. Convert the following numbers from Little Endian to Decimal
 
-d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81
+99c3980000000000
 
-1. Get the hex representation of this transaction.
+a135ef0100000000
