--- a/session5/5.md
+++ b/session5/5.md
@@ -1,21 +1,4 @@
-Helpful Reminders:
+1. Find the Output Address corresponding to this ScriptPubKey:
 
->>> from pycoin.encoding import b2a_hashed_base58
->>> from binascii import unhexlify
->>> s = unhexlify(hex(2**256-2**200)[2:-1])
->>> b2a_hashed_base58(chr(0x80)+s)
-u'5Km2kuu7vtF1mmnTprG5Qtchx5NYEBHp9X1nm6v1dNJSND1E5Ge'
->>> b2a_hashed_base58(chr(0x80)+s+chr(1))
-u'L5oLkpV3aqArQcffQCRYUSpbk6J4qARD6bUUyf6ymX1xxX9iVxpK'
->>> b2a_hashed_base58(chr(0xef)+s)
-u'93XfLeifX7K9jqHkTC9zHVAfbjjFPLq1VTsjqjGWy73V9JUWGuo'
->>> b2a_hashed_base58(chr(0xef)+s+chr(1))
-u'cWALDjUu1ts7a48vncEfqmKfNKbUVcWuAdcx65ZVGdfyDGDYyszf'
+1976a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac
 
-
-Find the WIF Format of the following:
-
-1. 2^256-2^199, mainnet, compressed
-2. 2^256-2^201, testnet, uncompressed
-3. 0dba685b4511dbd3d368e5c4358a1277de9486447af7b3604a69b8d9d8b7889d, mainnet, uncompressed
-4. 1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, testnet, compressed
