--- a/session2/2.md
+++ b/session2/2.md
@@ -1,14 +1,4 @@
-Helpful Reminders:
-
-Group Law for x_1 != x_2:
-
-Curve:y^2=x^3+ax+b
-(x_3, y_3) = (x_1,y_1) + (x_2,y_2)
-s=(y_2-y_1)/(x_2-x_1)
-x_3=s^2-x_1-x_2
-y_3=s*(x_1-x_3)-y_1
-
-For the y^2=x^3+7 curve over F_223, find:
+1. For the y^2=x^3+7 curve over F_223, find:
 
 1. (192,105) + (17,56) = ?
 2. (47,71) + (117,141) = ?
