--- a/session2/7.md
+++ b/session2/7.md
@@ -1,29 +1,4 @@
-Helpful Reminders:
-
-Equation y^2=x^3+7 (a=0, b=7)
-p = 2^256-2^32-977
-G = (79BE667EF9DCBBAC55A06295CE870B07029BFCDB2DCE28D959F2815B16F81798, 483ADA7726A3C4655DA4FBFC0E1108A8FD17B448A68554199C47D08FFB10D4B8)
-n = FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141
-
->>> from pycoin.ecdsa import generator_secp256k1 as g
->>> secret = 999
->>> x, y = (secret*g).pair()
->>> print(hex(x), hex(y))
-('0x9680241112d370b56da22eb535745d9e314380e568229e09f7241066003bc471L', '0xddac2d377f03c201ffa0419d6596d10327d6c70313bb492ff495f946285d8f38L')
-
-SEC Format:
-
-Compressed starts with 02 for even, 03 for odd followed by x coordinate
-Uncompressed starts with 04 followed by x coordinate and y coordinate
-
->>> from pycoin.encoding import double_sha256, b2a_base58, hash160
->>> sec = "025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC".decode('hex')
->>> h160 = hash160(sec)
->>> raw = chr(0x00) + h160
->>> raw = raw + double_sha256(raw)[:4]
->>> b2a_base58(raw)
-u'19ZewH8Kk1PDbSNdJ97FP4EiCjTRaZMZQA'
-
+Mainnet prefix is chr(0)
 Testnet is chr(0x6F)
 
 Find the mainnet and testnet address corresponding to these private keys:
