--- a/session2/8.md
+++ b/session2/8.md
@@ -1,3 +1,3 @@
-Create a testnet address using your own secret key!
+1. Create a testnet address using your own secret key!
 
 Send a secret key and address to chat.
