add jupyter to session 1

--- a/session1/5.md
+++ b/session1/5.md
@@ -1,3 +1,3 @@
-1. For the curve y^2 = x^3 + 5x + 7, what is (3,7) + (3,7)?
+### Make this test pass
 
-Verify this point is on the curve.
+    def test_add0(self):
