--- a/session1/1.md
+++ b/session1/1.md
@@ -1,9 +1,18 @@
-Solve these equations in F_31:
+### Problems
+
+1. Solve these equations in F_31:
 
 2+15=?
 
-29-4=?
-
 17+21=?
 
+29-4=?
+
 15-30=?
+
+### Make the following Tests Pass
+
+    def test_add(self):
+
+    def test_sub(self):
+
