--- a/session1/2.md
+++ b/session1/2.md
@@ -1,3 +1,5 @@
+### Problems
+
 1. Solve these equations in F_31:
 
 24*19=?
@@ -9,3 +11,9 @@
 2. Write a program to calculate 1*k, 2*k, 3*k, ... 30*k for some k in F_31. Notice anything about these sets?
 
 3. Write a program to calculate k^30 for all k in F_31. Notice anything?
+
+### Make the Following Tests Pass
+
+    def test_mul(self):
+        
+    def test_pow(self):
