--- a/session1/3.md
+++ b/session1/3.md
@@ -1,3 +1,5 @@
+### Problems
+
 1. Solve these equations in F_31:
 
 3/24 = ?
@@ -7,3 +9,7 @@
 4^(-4)*11 = ?
 
 2. Write a program to calculate k/1, k/2, k/3, ... k/30 for some k in F_31. Notice anything about these sets?
+
+### Make the following tests pass
+
+    def test_div(self):
