--- a/session2/6.md
+++ b/session2/6.md
@@ -1,5 +1,11 @@
+### Problems
+
 1. Find the Compressed and Uncompressed SEC format for public keys where private key is:
 
-1. 999^3
-2. 123
-3. 42424242
+    999^3
+    123
+    42424242
+    
+### Write this method
+
+    def sec(self):
