--- a/session2/1.md
+++ b/session2/1.md
@@ -1,3 +1,4 @@
+### Problems
 1. Which of these points are on the y^2=x^3+7 curve over F_223?
 
 (192,105)
@@ -9,3 +10,7 @@
 (1,193)
 
 (42,99)
+
+### Write the test
+
+    def test_on_curve(self):
