--- a/session2/2.md
+++ b/session2/2.md
@@ -1,5 +1,11 @@
+### Problems
+
 1. For the y^2=x^3+7 curve over F_223, find:
 
-1. (192,105) + (17,56) = ?
-2. (47,71) + (117,141) = ?
-3. (143,98) + (76,66) = ?
+(192,105) + (17,56) = ?
+(47,71) + (117,141) = ?
+(143,98) + (76,66) = ?
+
+### Write a test
+
+    def test_add1(self):
