--- a/session2/5.md
+++ b/session2/5.md
@@ -1,6 +1,4 @@
-p = 2^256-2^32-977
-G = (79BE667EF9DCBBAC55A06295CE870B07029BFCDB2DCE28D959F2815B16F81798, 483ADA7726A3C4655DA4FBFC0E1108A8FD17B448A68554199C47D08FFB10D4B8)
-n = FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141
+### Problems
 
 1. Get the public point where (s means secret)
 
@@ -12,5 +10,6 @@ s=2^128
 
 s=2^240+2^31
 
-2. Confirm the resulting points lie on the secp256k1 curve.
+### Write the test
 
+    def test_pubpoint(self):
