--- a/session2/7.md
+++ b/session2/7.md
@@ -1,8 +1,14 @@
-Mainnet prefix is chr(0)
-Testnet is chr(0x6F)
+### Problems
 
-Find the mainnet and testnet address corresponding to these private keys:
+Mainnet prefix is b'\x00'
+Testnet is '\x6F'
 
-1. Compressed, 888^3
-2. Uncompressed, 321
-3. Uncompressed, 4242424242
+1. Find the mainnet and testnet address corresponding to these private keys:
+
+    Compressed, 888^3
+    Uncompressed, 321
+    Uncompressed, 4242424242
+    
+### Make this test pass
+
+    def test_address(self):
