--- a/session3/3.md
+++ b/session3/3.md
@@ -1,8 +1,3 @@
-blockchain.info/tx/<tx_hash>?format=hex
+### Make this test pass
 
-
-Look up this transaction on blockchain.info:
-
-d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81
-
-1. Get the hex representation of this transaction.
+    def test_parse_version(self):
