--- a/session3/2.md
+++ b/session3/2.md
@@ -1,3 +1,5 @@
+### Problems
+
 1. Convert the following hex from Big Endian to Little Endian:
 
 03ee4f7a4e68f802303bc659f8f817964b4b74fe046facc3ae1be4679d622c45
@@ -9,3 +11,9 @@
 99c3980000000000
 
 a135ef0100000000
+
+### Make these tests pass
+
+    def test_flip_endian(self):
+    
+    def test_little_endian_to_int(self):
