--- a/session4/4.md
+++ b/session4/4.md
@@ -1,3 +1,8 @@
-1. Determine a ScriptSig that will satisfy this:
+### Problems
 
-ScriptPubKey = OP_DUP OP_DUP OP_MUL OP_ADD OP_6 OP_EQUAL
+1. Validate this signature
+
+sec = 0349fc4e631e3624a545de3f89f5d8684c7b8138bd94bdd531d2e213bf016b278a
+z = 27e0c5994dec7824e56dec6b2fcb342eb7cdb0d0957c2fce9882f715e85d81a6
+r = ed81ff192e75a3fd2304004dcadb746fa5e24c5031ccfcf21320b0277457c98f
+s = 7a986d955c6e0cb35d446a89d3f56100f4d7f67801c31967743a9c8e10615bed
