--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -133,6 +133,8 @@
     }
    ],
    "source": [
+    "# Exercise 1\n",
+    "\n",
     "print((2 + 15) % 31)\n",
     "print((17 + 21) % 31)\n",
     "print((29 - 4) % 31)\n",
@@ -155,6 +157,8 @@
     }
    ],
    "source": [
+    "# Exercise 2.1\n",
+    "\n",
     "print((24 * 19) % 31)\n",
     "print((17**3) % 31)\n",
     "print((5**5 * 18) % 31)"
@@ -174,6 +178,8 @@
     }
    ],
    "source": [
+    "# Exercise 2.2\n",
+    "\n",
     "k = 8\n",
     "print(sorted([k*i % 31 for i in range(31)]))"
    ]
@@ -192,6 +198,8 @@
     }
    ],
    "source": [
+    "# Exercise 2.3\n",
+    "\n",
     "print([i**30 % 31 for i in range(31)])"
    ]
   },
@@ -211,6 +219,8 @@
     }
    ],
    "source": [
+    "# Exercise 3.1\n",
+    "\n",
     "print((3 * 24**29) % 31)\n",
     "print(((17**29)**3) % 31)\n",
     "print(((4**29)**4 * 11) % 31)"
@@ -230,6 +240,8 @@
     }
    ],
    "source": [
+    "# Exercise 3.2\n",
+    "\n",
     "k = 19\n",
     "print(sorted([k*i**29 % 31 for i in range(31)]))"
    ]
@@ -250,6 +262,8 @@
     }
    ],
    "source": [
+    "# Exercise 4\n",
+    "\n",
     "points = ((-2,4), (3,7), (18,77))\n",
     "for point in points:\n",
     "    if point[1]**2 == point[0]**3 + 5 * point[0] + 7:\n",
@@ -272,6 +286,8 @@
     }
    ],
    "source": [
+    "# Exercise 6\n",
+    "\n",
     "x1, y1 = (2,5) \n",
     "x2, y2 = (-1,-1)\n",
     "\n",
@@ -295,6 +311,8 @@
     }
    ],
    "source": [
+    "# Exercise 7\n",
+    "\n",
     "x1, y1 = (-1,1)\n",
     "a = 5\n",
     "s=(3*x1**2+a)/(2*y1)\n",
