--- a/session6/2.md
+++ b/session6/2.md
@@ -1,5 +1,13 @@
-1. Parse this block:
+### Problems
 
-000000203c437224480966081c2b14afac79e58207d996c8ac9d32000000000000000000847a4c2c77c8ecf0416ca07c2dc038414f14135017e18525f85cacdeedb54244e0d6b958df620218c626368a
+1. What is this block signaling for?
 
-Version, previous block hash, merkle root, bits, timestamp and nonce.
+020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d
+
+### Make these tests pass
+
+in block.py
+
+    def test_bip141(self):
+    
+    def test_bip91(self):
