--- a/session3/2.md
+++ b/session3/2.md
@@ -17,3 +17,5 @@ a135ef0100000000
     def test_flip_endian(self):
     
     def test_little_endian_to_int(self):
+    
+    def test_int_to_little_endian(self):
