--- a/session3/complete/session3.ipynb
+++ b/session3/complete/session3.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "..\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.628s\n",
+      "Ran 2 tests in 0.739s\n",
       "\n",
       "OK\n"
      ]
@@ -44,9 +44,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..\n",
+      "....\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.002s\n",
+      "Ran 4 tests in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
       ]
      },
      "execution_count": 2,
@@ -222,6 +222,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "b'\\x01\\x00\\x00\\x00'\n"
+     ]
+    }
+   ],
+   "source": [
+    "version = 1\n",
+    "length = 4\n",
+    "print(version.to_bytes(length, byteorder='little'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "b'452c629d67e41baec3ac6f04fe744b4b9617f8f859c63b3002f8684e7a4fee03'\n",
       "b'd1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81'\n",
       "10011545\n",
@@ -247,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
