--- a/session3/session3.ipynb
+++ b/session3/session3.ipynb
@@ -11,7 +11,7 @@
      "text": [
       ".s\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.314s\n",
+      "Ran 2 tests in 0.334s\n",
       "\n",
       "OK (skipped=1)\n"
      ]
@@ -44,17 +44,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ss\n",
+      ".sss\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.002s\n",
+      "Ran 4 tests in 0.004s\n",
       "\n",
-      "OK (skipped=2)\n"
+      "OK (skipped=3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
       ]
      },
      "execution_count": 2,
@@ -104,13 +104,6 @@
     "suite = unittest.TestLoader().loadTestsFromModule(TxTest())\n",
     "unittest.TextTestRunner().run(suite)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
