--- a/session4/4.md
+++ b/session4/4.md
@@ -1,8 +1,23 @@
 ### Problems
 
-1. Validate this signature
+Helpful reminder:
 
-sec = 0349fc4e631e3624a545de3f89f5d8684c7b8138bd94bdd531d2e213bf016b278a
-z = 27e0c5994dec7824e56dec6b2fcb342eb7cdb0d0957c2fce9882f715e85d81a6
-r = ed81ff192e75a3fd2304004dcadb746fa5e24c5031ccfcf21320b0277457c98f
-s = 7a986d955c6e0cb35d446a89d3f56100f4d7f67801c31967743a9c8e10615bed
+https://api.blockcypher.com/v1/btc/main/txs/<tx_hash>
+https://api.blockcypher.com/v1/btc/test3/txs/<tx_hash>
+
+1. What is the value and scriptPubKey of the 0th output of this transaction?
+
+d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81
+
+
+### Make this test pass
+
+in tx.py:
+
+    def test_input_value(self):
+    
+    def test_input_pubkey(self):
+    
+Bonus:
+
+Cache the requests so that you don't hit blockcypher.com multiple times for the same transaction output
