--- a/session4/6.md
+++ b/session4/6.md
@@ -1,5 +1,6 @@
-### Problems
+### Make this test pass
 
-1. Determine a ScriptSig that will satisfy this:
-
-ScriptPubKey = OP_DUP OP_DUP OP_MUL OP_ADD OP_6 OP_EQUAL
+in tx.py:
+    
+    def test_hash_to_sign(self):
+    
