--- a/session4/session4.ipynb
+++ b/session4/session4.ipynb
@@ -9,11 +9,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..s.\n",
+      "....\n",
       "----------------------------------------------------------------------\n",
       "Ran 4 tests in 0.004s\n",
       "\n",
-      "OK (skipped=1)\n"
+      "OK\n"
      ]
     },
     {
@@ -44,20 +44,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ssss.....ss.s\n",
+      "..\n",
       "----------------------------------------------------------------------\n",
-      "Ran 13 tests in 0.017s\n",
+      "Ran 2 tests in 0.002s\n",
       "\n",
-      "OK (skipped=7)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=13 errors=0 failures=0>"
+       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
       ]
      },
      "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from script import ScriptTest\n",
+    "import unittest\n",
+    "\n",
+    "suite = unittest.TestLoader().loadTestsFromModule(ScriptTest())\n",
+    "unittest.TextTestRunner().run(suite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".ssss.....s\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 11 tests in 0.009s\n",
+      "\n",
+      "OK (skipped=5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=11 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,13 +104,6 @@
     "suite = unittest.TestLoader().loadTestsFromModule(TxTest())\n",
     "unittest.TextTestRunner().run(suite)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
