--- a/session4/1.md
+++ b/session4/1.md
@@ -1,20 +1,7 @@
 ### Problems
 
-Helpful reminder:
+1. Determine a ScriptSig that will satisfy this scriptPubKey:
 
-https://api.blockcypher.com/v1/btc/main/txs/<tx_hash>
-https://api.blockcypher.com/v1/btc/test3/txs/<tx_hash>
+767695935687
 
-1. What is the value and scriptPubKey of the 0th output of this transaction?
-
-d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81
-
-
-### Make this test pass
-
-in tx.py:
-
-    def test_input_value(self):
-    
-    def test_input_pubkey(self):
-    
+Hint: use the Script.parse method
