--- a/session1.ipynb
+++ b/session1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,24 +40,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "7\n",
+      "25\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "# remember that % is the modulo operator\n",
-    "# 2+15=?\n",
-    "# 17+21=?\n",
-    "# 29-4=?\n",
-    "# 15-30=?"
+    "print((2 + 15) % 31)\n",
+    "print((17 + 21) % 31)\n",
+    "print((29 - 4) % 31)\n",
+    "print((15 - 30) % 31)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1.2\n",
     "\n",
@@ -93,45 +120,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "15\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.1\n",
     "\n",
-    "# remember that ** is the exponentiation operator\n",
-    "# 24*19=?\n",
-    "# 17^3=?\n",
-    "# 5^5*18=?"
+    "print((24 * 19) % 31)\n",
+    "print((17**3) % 31)\n",
+    "print((5**5 * 18) % 31)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.2\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
+    "k = 8\n",
+    "print(sorted([k*i % 31 for i in range(31)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.3\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
+    "print([i**30 % 31 for i in range(31)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.4\n",
     "\n",
@@ -165,34 +235,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "29\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "# remember pow(x, p-2, p) is the same as 1/x in F_x\n",
-    "# 3/24 = ?\n",
-    "# 17^(-3) = ?\n",
-    "# 4^(-4)*11 = ?"
+    "print((3 * 24**29) % 31)\n",
+    "print(((17**29)**3) % 31)\n",
+    "print(((4**29)**4 * 11) % 31)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.2\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
+    "k = 19\n",
+    "print(sorted([k*i**29 % 31 for i in range(31)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.3\n",
     "\n",
@@ -223,21 +323,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-2,4) is not valid\n",
+      "(3,7) is valid\n",
+      "(18,77) is valid\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "# (-2,4), (3,7), (18,77)\n",
-    "# equation in python is: y**2 == x**3 + 5*x + 7"
+    "points = ((-2,4), (3,7), (18,77))\n",
+    "for point in points:\n",
+    "    if point[1]**2 == point[0]**3 + 5 * point[0] + 7:\n",
+    "        print('({},{}) is valid'.format(point[0], point[1]))\n",
+    "    else:\n",
+    "        print('({},{}) is not valid'.format(point[0], point[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.2\n",
     "\n",
@@ -259,9 +385,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -285,23 +423,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0 -7.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "# formula in python:\n",
-    "# s = (y2-y1)/(x2-x1)\n",
-    "# x3 = s**2 - x2 - x1\n",
-    "# y3 = s*(x1-x3)-y1"
+    "x1, y1 = (2,5) \n",
+    "x2, y2 = (-1,-1)\n",
+    "\n",
+    "s=(y2-y1)/(x2-x1)\n",
+    "x3=s**2-x1-x2\n",
+    "y3=s*(x1-x3)-y1\n",
+    "print(x3, y3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -325,23 +486,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.0 -77.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.1\n",
     "\n",
-    "# formula in python\n",
-    "# s = (3*x1**2+a)/(2*y1)\n",
-    "# x3 = s**2 - 2*x1\n",
-    "# y3 = s*(x1-x3) - y1"
+    "x1, y1 = (-1,1)\n",
+    "a = 5\n",
+    "s=(3*x1**2+a)/(2*y1)\n",
+    "x3=s**2-2*x1\n",
+    "y3=s*(x1-x3)-y1\n",
+    "print(x3, y3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.2\n",
     "\n",
