added session2 exercises

--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -380,6 +380,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'13vBaGDHtHdj6aKPcCCPdy8nLXhaatu6xk'\n",
+      "b'miS8sKJGhK4ysgo1KmAmTtM7CXJHWYzBjk'\n",
+      "b'1S6g2xBJSED7Qr9CYZib5f4PYVhHZiVfj'\n",
+      "b'mfx3y63A7TfTtXKkv7Y6QzsPFY6QCBCXiP'\n",
+      "b'1226JSptcStqn4Yq9aAmNXdwdc2ixuH9nb'\n",
+      "b'mgY3bVusRUL6ZB2Ss999CSrGVbdRwVpM8s'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 7\n",
+    "\n",
+    "from binascii import unhexlify\n",
+    "\n",
+    "from ecc import G\n",
+    "from helper import double_sha256, encode_base58, hash160\n",
+    "\n",
+    "for private_key, compressed in ((8883, True), (321, False), (4242424242, False)):\n",
+    "    point = private_key*G\n",
+    "    sec = unhexlify(point.sec(compressed=compressed))\n",
+    "    h160 = hash160(sec)\n",
+    "    raw = b'\\x00' + h160\n",
+    "    raw = raw + double_sha256(raw)[:4]\n",
+    "    print(encode_base58(raw))\n",
+    "    raw = b'\\x6f' + h160\n",
+    "    raw = raw + double_sha256(raw)[:4]\n",
+    "    print(encode_base58(raw))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 9\n",
+    "\n",
+    "from ecc import S256Point, N\n",
+    "\n",
+    "point = S256Point(0x887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c, 0x61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34)\n",
+    "z, r, s = 0xec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60, 0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395, 0x68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4\n",
+    "u = z * pow(s, N-2, N) % N\n",
+    "v = r * pow(s, N-2, N) % N\n",
+    "print((u*G + v*point).x.num == r)\n",
+    "\n",
+    "z, r, s = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d, 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c, 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6\n",
+    "u = z * pow(s, N-2, N) % N\n",
+    "v = r * pow(s, N-2, N) % N\n",
+    "print((u*G + v*point).x.num == r)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -402,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
