--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -32,11 +32,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sssss\n",
+      ".ssss\n",
       "----------------------------------------------------------------------\n",
-      "Ran 5 tests in 0.007s\n",
+      "Ran 5 tests in 0.006s\n",
       "\n",
-      "OK (skipped=5)\n"
+      "OK (skipped=4)\n"
      ]
     },
     {
