made session0 better

--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -52,6 +52,11 @@
     "s = 'hello world'\n",
     "b = b'hello world'\n",
     "\n",
+    "# These may look the same but the 'b' prefix means that one is bytes\n",
+    "# Basically, the on-disk characters on the system are bytes\n",
+    "# and the actual symbols in unicode are strings\n",
+    "# A good explanation of the difference is here: http://www.diveintopython3.net/strings.html\n",
+    "\n",
     "print(s==b) # False\n",
     "\n",
     "# You convert from string to bytes this way:\n",
@@ -63,6 +68,47 @@
     "\n",
     "hello_world_string = b.decode('ascii')\n",
     "print(hello_world_string == s) # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can also import local python files here\n",
+    "\n",
+    "from helper import bytes_to_str # This function is supposed to do the above\n",
+    "\n",
+    "print(bytes_to_str(b'hello')) # NotImplementedError\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 1\n",
+    "\n",
+    "# Make this test pass\n",
+    "# helper.py:HelperTest:test_bytes\n",
+    "\n",
+    "# In order to do this, you'll have to open helper.py\n",
+    "# and implement the bytes_to_str and str_to_bytes functions\n",
+    "# Once you're done editing helper.py, you'll want to \n",
+    "# restart the kernel (use the Kernel menu option or the refresh button in the toolbar)\n",
+    "# run this again.\n",
+    "# Try it now!\n",
+    "\n",
+    "from helper import HelperTest\n",
+    "import unittest\n",
+    "\n",
+    "suite = unittest.TestLoader().loadTestsFromModule(HelperTest())\n",
+    "unittest.TextTestRunner().run(suite)\n",
+    "\n",
+    "# If you had trouble with this, there's a complete directory that you can look at\n",
+    "# Try not to use it until after you've attempted the problem."
    ]
   },
   {
@@ -118,8 +164,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can import local python files\n",
-    "\n"
+    "# Exercise 2\n",
+    "\n",
+    "# reverse this hex dump\n",
+    "# b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a\n",
+    "\n",
+    "# Hint: you'll want to turn this into binary data, reverse and turn it into hex again\n",
+    "\n",
+    "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'"
    ]
   }
  ],
